--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="idade">Idade</string>
     <string name="nome">Nome</string>
     <string name="logo">logo</string>
+    <string name="seta_voltar">seta_voltar</string>
+    <string name="entrar">Entrar</string>
+    <string name="cadastre_se">Cadastre-se</string>
+    <string name="optimus_way">Optimus Way</string>
 </resources>
